third major update

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 
 :root {
-  --primary-color:rgb(184, 184, 184);
+  --primary-color:#b8b8b8;
   --secondary-color:#141414;
   --teritary-color:#555555;
 }
