--- a/src/components/AISummary/style.css
+++ b/src/components/AISummary/style.css
@@ -23,6 +23,7 @@ p, li {
 
 .aiSummaryPanel {
     padding:60px;
+    position:relative;
     
 }
 
@@ -38,4 +39,11 @@ p, li {
     text-align: center;
     width:100%;
     height:100%;
+}
+
+nav.panelNav {
+    position:absolute;
+    top:0;
+    padding:0;
+
 }
