--- a/src/components/SubsectionView/style.css
+++ b/src/components/SubsectionView/style.css
@@ -20,6 +20,10 @@
     padding:15px 20px;
     border-bottom:1px solid gray;
     background-color: rgb(199, 199, 199);
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    gap:20px;
 }
 
 .subsectionView h2 {
@@ -38,4 +42,22 @@
 .pointText {
     font-size:15px;
     /* margin:0; */
+}
+
+.circle {
+    width:10px;
+    height:10px;
+    border:1px solid black;
+
+    border-radius:100px;
+}
+
+.circle:hover{
+    cursor:pointer;
+    background-color:black;
+}
+
+.circle .active{
+    background-color:black;
+
 }
