--- a/src/components/SubsectionView/style.css
+++ b/src/components/SubsectionView/style.css
@@ -7,7 +7,7 @@
     padding: 20px;
     display: flex;
     background-color: var(--primary-color);
-    border-bottom:1px solid white;
+    /* border-bottom:1px solid white; */
     border-radius:2px;
     align-items: center;
 }
