--- a/src/components/Overlay/style.css
+++ b/src/components/Overlay/style.css
@@ -1,4 +1,4 @@
-.overlay {
+/* .overlay {
     width:100vw;
     height:100vh;
     background-color: black;
@@ -7,4 +7,4 @@
     position:absolute;
     left:0;
     top:0;
-}
+} */
