--- a/src/components/AISummary/style.css
+++ b/src/components/AISummary/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 
 h1, h2, h3, h4, h5, h6 {
@@ -50,4 +50,4 @@ nav.panelNav {
 
 .feedbackView {
     display:flex;
-}
+} */
