--- a/src/components/Alert/style.css
+++ b/src/components/Alert/style.css
@@ -1,21 +1,21 @@
-.alert {
+/* .alert {
     z-index: 3;
     width: 450px;
-    height: 175px;
+    height: auto;
     background-color: var(--primary-color);
     margin: 0;
-    padding: 50px;
+    padding: 75px;
     position: absolute;
     left:50%;
     top:50%;
     transform:translate(-50%,-50%);
     display: flex;
-    flex-direction: column;
-    flex-grow: 1;
+    flex-direction: column; 
     gap:30px;
-    border-radius:20px;
+
 
 }
+
 
 .alert button {
     width:25%;
@@ -33,3 +33,14 @@
 .alert * {
     margin: 0;
 }
+
+
+.exitIcon {
+    flex-grow:0;
+    flex-shrink:0;
+    align-self: flex-start;
+}
+
+.exitIcon:hover {
+    cursor:pointer;
+} */
