--- a/src/components/Landing/style.css
+++ b/src/components/Landing/style.css
@@ -1,4 +1,4 @@
-.landingPage {
+/* .landingPage {
     width:100vw;
     height:100vh;
     display: flex;
@@ -7,4 +7,4 @@
     flex-direction: column;
     text-align: center;
 }
-
+ */
