--- a/src/components/LoginSignup/style.css
+++ b/src/components/LoginSignup/style.css
@@ -1,9 +1,8 @@
-.login {
+/* .login {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* text-align: center; */
     gap:10px;
     width:100vw;
     height:100vh;
@@ -50,4 +49,4 @@ input:focus {
 
 .options * {
     margin:15px 0;
-}
+} */
