--- a/src/components/Tiptap/Header/style.css
+++ b/src/components/Tiptap/Header/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 .tiptap p.is-editor-empty:first-child::before {
   color: #555555;
@@ -25,5 +25,4 @@
 .ProseMirror.editor {
   font-family: "Playfair Display";
   font-size:22px;
-  /* width:750px; */
-}
+} */
